results/SpecGenBench/2-shot/log-MatrixMul-2023_11_28_11_25_14.txt
public class MatrixMul {
    
    //@ requires a.length == 2 && b.length == 2;
    //@ requires a[0].length == 2 && a[1].length == 2;
    //@ requires b[0].length == 2 && b[1].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2 && \result[1].length == 2;
    //@ ensures \result[0][0] == a[0][0] * b[0][0] + a[0][1] * b[1][0];
    //@ ensures \result[0][1] == a[0][0] * b[0][1] + a[0][1] * b[1][1];
    //@ ensures \result[1][0] == a[1][0] * b[0][0] + a[1][1] * b[1][0];
    //@ ensures \result[1][1] == a[1][0] * b[0][1] + a[1][1] * b[1][1];
    public int[][] multiply(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        //@ assume c[0] != null && c[1] != null && c[0].length == 2 && c[1].length == 2;
        //@ assume \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; c[i][j] == 0;
        //@ maintaining 0 <= i && i <= 2;
        //@ maintaining \forall int p; 0 <= p && p < i; (\forall int q; 0 <= q && q < 2; c[p][q] == a[p][0] * b[0][q] + a[p][1] * b[1][q]);
        //@ decreases 2 - i;
        for (int i = 0; i < 2; i++) {
            //@ maintaining 0 <= j && j <= 2;
            //@ maintaining \forall int q; 0 <= q && q < j; c[i][q] == a[i][0] * b[0][q] + a[i][1] * b[1][q];
            //@ decreases 2 - j;
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixMul.java:23: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][0] * b[0][j] + a[i][1] * b[1][j];
                  ^
  Reason: Double rewriting of ident: i i_1067_1067___46 i_1067_1081___52
1 error

